fix: hero height fixed to a small viewport on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -63,6 +63,7 @@
 
 .hero-img {
 	height: 100vh;
+	height: 100svh;
 	display: flex;
 	align-items: flex-end;
 }
